--- a/crates/cairo-lang-runner/Cargo.toml
+++ b/crates/cairo-lang-runner/Cargo.toml
@@ -27,6 +27,7 @@ keccak.workspace = true
 num-bigint = { workspace = true, default-features = true }
 num-integer.workspace = true
 num-traits = { workspace = true, default-features = true }
+sha2 = "0.10.8"
 smol_str.workspace = true
 starknet-crypto.workspace = true
 thiserror.workspace = true
